--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.03.2022 08:36:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.03.2022 09:15:14</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 23.3.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Tiramisu</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hrachová polévka s krutony -v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hrachová polévka s krutony -samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí kari, pečená zelenina, basmati rýže, koriandr, sezam <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Těstoviny zapečené s uzeným masem, smetanou a sýrem, salát coleslaw, nakládaná okurka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Portobello zapečené s cibulovým chutney a modrým sýrem, bylinkové brambory, trhaný salát, cherry rajčata <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -94,7 +129,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s citronem a ancovickovym dresinkem, cockovy salat s paprikami a zeleninou 139</li><li>Peceny filet z cerstveho morskeho vlka s citronem a ancovickovym dresinkem, cockovy salat s paprikami a zeleninou 175</li><li>Malajsky hovezi rendang s kokosovym mlekem,  zazvorem, limetkovymi listky a vonavym korenim, jasminova ryze, salatek 139</li><li>Italske rizoto s gorgonzolou, susenymi rajcaty a uzenym veprovym jazykem, salatek 165</li><li>Maghrebska zapecena saksuka s rajcaty, vejci, bylinkami a balkanskym syrem, kuskus, salatek {L} 139</li></ol>
+<ol><li>Smazeny kapr po secuansku ve sladkokysele omacce se zeleninou a secuanskym peprem, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou 169</li><li>Grilovana seleci zebra se zazvorem a ananasem, jasminova ryze, salatek 139</li><li>Smazene rizecky z panenske svickove, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou, citron {L} 169 </li><li>Burrito s pikantnim fazolovym chilli s paprikami, pecenou dyni a chipotle, pecene brambory, jogurovy dip, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
