--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.03.2022 07:14:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.03.2022 07:44:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 24. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Papriková s párkem</strong>
+<strong>Čočková s párkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>1/2 pečeného kuřátka s pečenými bramborami a karotkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							137,-
-						</span>
-</p>
-<p>
-<strong>Milánské těstoviny s parmazánem</strong>
+<strong>Hrachová kaše s uzenou krkovičkou, okurkou a cibulkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
+						</span>
+</p>
+<p>
+<strong>Smažený provensálský řízek s vařeným bramborem a okurkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							137,-
 						</span>
 </p>
 <p>
