--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.03.2022 08:35:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.03.2022 09:14:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 24.3.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bezlepková bezé roláda s marmeládou a vanilkovým krémem, pistácie</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Květákový krém, restovaná semínka, petrželka -v menu <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Květákový krém, restovaná semínka, petrželka- samostatně <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>250g Kuřecí stehno pečené na medu, krémová omáčka, karotka, chilli, basmati rýže, bylinky <em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřová plec na paprice, zakysaná smetana, tarhoňa, petržel <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Palačinky plněné zeleninou ratatouille a cheddar sýrem, listový salát, citronový dresink <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -91,7 +126,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny kapr po secuansku ve sladkokysele omacce se zeleninou a secuanskym peprem, jasminova ryze, salatek (L)  139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou 169</li><li>Grilovana seleci zebra se zazvorem a ananasem, jasminova ryze, salatekbz cervene repy 139</li><li>Smazene rizecky z panenske svickove, bramborovy salat s cervenou repou, cibulkou, koprem a majonezou, citron {L} 169 </li><li>Burrito s pikantnim fazolovym chilli s paprikami, pecenou dyni a chipotle, pecene brambory, jogurovy dip, salatek {L} 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho candata s citronem a petrzelkovym pestem, stouchane brambory s creme fraiche, salatek 175</li><li>Palive a vonave goanske vindalu s hovezim masem, bramborami a garam masala, jasminova ryze, salatek 139</li><li>Pecena divoka kachna s nadivkou s kachnimi jatry a susenymi rajcaty,  merunkove catny, gratinovane brambory, salatek z cervene repy 175</li><li>Smazeny kvetak, stouchane brambory s creme fraiche, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
